syntax = "proto3";

package api.note_v1;

option go_package = "github.com/MaksMalf/test_gRPC/pkg/note_v1";

service NoteV1 {
  rpc CreateNote (CreateNoteRequest) returns (CreateNoteResponce);
  rpc GetNote (GetNoteRequest) returns (GetNoteResponce);
  rpc GetListNote (GetListNoteRequest) returns (GetListNoteResponce);
  rpc UpdateNote (UpdateNoteRequest) returns (UpdateNoteResponce);
  rpc DeleteNote (DeleteNoteRequest) returns (DeleteNoteResponce);
}

message CreateNoteRequest {
  string title = 1;
  string text = 2;
  string author = 3;
}

message CreateNoteResponce {
  int64 id = 1;
}

message GetNoteRequest {
  int64 id = 1;
}

message GetNoteResponce {
  string title = 1;
  string text = 2;
  string author = 3;
}

message GetListNoteRequest {
  string getAll = 1;
}

message GetListNoteResponce {
  string allList = 1;
}

message UpdateNoteRequest {
  int64 id = 1;
  string title = 2;
}

message UpdateNoteResponce {
  string newTitle = 1;
}

message DeleteNoteRequest {
  int64 id = 1;
}

message DeleteNoteResponce {
  string delNote = 1;
}